--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-    <!-- Envuelve todo el contenido de la página en un nuevo div con la clase page Recuerda agregar la etiqueta de cierre -->
     <div class="page">
       <header class="header">
         <nav class="nav">
@@ -19,7 +18,6 @@
             alt="Logotipo de la Biblioteca Triple Peaks"
             class="nav__logo"
           />
-          <!-- Se supone que poner enlaces de navegación en una lista es la mejor práctica para escribir el código semántico, ya que permite a los lectores de pantalla hacer una pausa entre cada enlace en lugar de leer todos los enlaces como una oración. -->
           <ul class="nav__links">
             <li>
               <a class="nav__link" href="#staff"
@@ -27,13 +25,13 @@
               >
             </li>
             <li>
-              <a class="nav__link">Eventos</a>
+              <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Conviértete en miembro</a>
+              <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link">Contactos</a>
+              <a class="nav__link" href="#footer">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -59,12 +57,10 @@
           <p class="header__address">Triple Peaks, 200 Success Avenue</p>
         </div>
       </header>
-
       <main class="content">
         <section class="staff" id="staff">
-          <h2 class="staff__title">Los preferidos de nuestros lectores</h2>
+          <h2 class="staff__title">Los preferidos de nuestro staff</h2>
           <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
-
           <ul class="staff__cards">
             <li class="card">
               <div class="card__content">
@@ -138,42 +134,6 @@
                 <p class="card__footer">Steve McConnell</p>
               </div>
             </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  Más allá del Algoritmo: Pensamiento Crítico para Programadores
-                </h3>
-                <p class="card__text">
-                  En un mundo cada vez más automatizado, el pensamiento crítico
-                  se convierte en la habilidad más poderosa de un programador.
-                  Este libro explora cómo ir más allá de las soluciones
-                  automáticas, cuestionando supuestos, optimizando procesos y
-                  desarrollando una mentalidad de análisis profundo. Un
-                  imprescindible para quienes buscan destacar en tecnología y
-                  liderazgo.
-                </p>
-                <p class="card__footer">Andrea L. Torres</p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  Arquitectura de Código: Diseñando Sistemas Resilientes
-                </h3>
-                <p class="card__text">
-                  Este libro revela los secretos detrás de sistemas de software
-                  que resisten el paso del tiempo. Desde patrones de
-                  arquitectura hasta principios de diseño evolutivo, es una guía
-                  práctica para programadores que desean construir proyectos
-                  robustos, escalables y sostenibles. Ideal tanto para
-                  desarrolladores como para arquitectos de software en
-                  formación.
-                </p>
-                <p class="card__footer">Santiago Paredes</p>
-              </div>
-            </li>
           </ul>
         </section>
         <section class="events" id="events">
@@ -213,15 +173,12 @@
             </p>
             <a href="#" class="events__more">Más eventos &rarr;</a>
           </div>
-
           <div class="events__cover">
             <img
               src="./images/cafe.png"
-              alt="Sala cafe"
+              alt="sala de cafe"
               class="events__image"
             />
-
-            <!-- Joan Feynman -->
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
               <img
@@ -230,8 +187,6 @@
                 class="person__image person__image_size_l"
               />
             </div>
-
-            <!-- Margaret Burbidge -->
             <div class="person person_name_burbidge">
               <p class="person__caption">Margaret Burbidge</p>
               <img
@@ -240,8 +195,6 @@
                 class="person__image person__image_size_m"
               />
             </div>
-
-            <!-- Annie Jump Cannon -->
             <div class="person person_name_cannon">
               <img
                 src="./images/person_cannon.png"
@@ -250,8 +203,6 @@
               />
               <p class="person__caption">Annie Jump Cannon</p>
             </div>
-
-            <!-- Maria Mitchell -->
             <div class="person person_name_mitchell">
               <img
                 src="./images/person_mitchell.png"
@@ -260,8 +211,6 @@
               />
               <p class="person__caption">Maria Mitchell</p>
             </div>
-
-            <!-- Jill Tarter -->
             <div class="person person_name_tarter">
               <p class="person__caption">Jill Tarter</p>
               <img
@@ -272,7 +221,6 @@
             </div>
           </div>
         </section>
-
         <section class="membership" id="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
@@ -378,12 +326,9 @@
               </ul>
             </div>
           </div>
-          <p class="footer__copyright">© 2024 Axel Cisneros</p>
+          <p class="footer__copyright">&#x00a9; 2024 Axel Cisneros</p>
         </div>
       </footer>
-    </div>
-    <div id="loom-companion-mv3" ext-id="liecbddmkiiihnedobmlmillhodjkdmb">
-      <div id="shadow-host-companion"></div>
     </div>
   </body>
 </html>
